# hondana

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  config.example.yml  docker-compose.yml  pyproject.toml
api/: Dockerfile  _llm_transport.py  auth.py  config_store.py  constants.py  db.py  generator.py  hondana_types.py  job_handler.py  jobs.py  jobs_db.py  main.py  manager.py  requirements.txt  retriever.py  tables_meta.py
api/ingest/: embed_client.py  llm_client.py
api/ingest/chunker/: __init__.py  _dispatch.py  _fetch.py  _html.py  _md.py  _models.py  _office.py  _pdf.py  _reddit.py  _text.py
api/ingest/pipeline/: __init__.py  _answer.py  _append.py  _collection.py  _directory.py  _document.py  _duplicate.py  _rows.py  _url.py
api/routers/: ask.py  config.py  ingest.py  jobs.py  mcp.py  tables.py  view.py
api/scripts/: migrate_embeddings.py
api/tests/: conftest.py  test_jobs.py  test_jobs_db.py  test_mcp_registry.py  test_pipeline_answer.py  test_pipeline_document.py  test_retriever_helpers.py  test_retriever_search.py  test_transports.py
client/: README.md  hondana_push.py
scripts/: backup.py
scripts/ingest/: Dockerfile  get_x_token.py  ingest_x.py  scheduler.py
webui/: Dockerfile  api_client.py  app.py  page_bookmarklet.py  requirements.txt  utils.py
webui/.streamlit/: config.toml
webui/ui_pages/: chat.py  ingest.py  jobs.py  knowledge.py  settings.py
